--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,22 @@
+:root {
+    --primary-bg-color: #0F111A;
+    --secondary-bg-color: #181b29;
+    --primary-text-color: #4D5160;
+    --accent-color: #8290c4;
+    --secondary-color: #60667a;
+    --shadow-color: rgba(0, 0, 0, 0.1);
+    --border-color: #4D5160;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #0F111A;
+    background-color: var(--primary-bg-color);
     font-family: sans-serif;
+    color: var(--primary-text-color);
 }
 
 .main-container {
@@ -31,12 +42,12 @@ footer {
     width: 10rem;
     height: 10rem;
     margin: 2rem;
-    border: 2px solid #4D5160;
+    border: 2px solid var(--border-color);
     border-radius: 0.5rem;
 }
 
 .text {
-    color: #4D5160;
+    color: var(--primary-text-color);
     margin: 2rem 0;
     text-align: center;
 }
@@ -46,7 +57,7 @@ footer {
 }
 
 .custom-width {
-    width: 60%;
+    width: 80%;
 }
 
 .icons {
@@ -62,17 +73,13 @@ footer {
 }
 
 .icons li i {
-    color: #4d5160;
+    color: var(--primary-text-color);
     font-size: 24px;
     transition: color 0.3s ease;
 }
 
 .icons li i:hover {
-    color: #60667a;
-}
-
-.carousel-container {
-    overflow: hidden;
+    color: var(--secondary-color);
 }
 
 .carousel-container {
@@ -92,11 +99,15 @@ footer {
     width: 18.75rem;
     height: fit-content;
     margin: 0 0 0 1rem;
-    background-color: #181b29;
+    background-color: var(--secondary-bg-color);
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 2px solid #4D5160;
+    box-shadow: 0 4px 6px var(--shadow-color);
+    border: 2px solid var(--border-color);
     overflow: hidden;
+}
+
+.carousel-item:hover {
+    cursor: pointer;
 }
 
 .carousel-item img {
@@ -113,18 +124,18 @@ footer {
 .carousel-text h3 {
     margin: 10px 0;
     font-size: 1.2rem;
-    color: #4D5160;
+    color: var(--primary-text-color);
 }
 
 .carousel-text p {
     margin-bottom: 20px;
-    color: #4D5160;
+    color: var(--primary-text-color);
 }
 
 .carousel-text a {
     display: flex;
     align-items: center;
-    color: #4D5160;
+    color: var(--primary-text-color);
     text-decoration: none;
 }
 
@@ -139,7 +150,7 @@ footer {
 
 .project-buttons a {
     margin: 0 0;
-    color: #4D5160;
+    color: var(--primary-text-color);
     text-decoration: none;
     transition: color 0.3s ease;
 }
@@ -149,12 +160,15 @@ footer {
 }
 
 .project-buttons a:hover {
-    color: #60667a;
+    color: var(--secondary-color);
 }
 
 hr {
-    width: 35%;
-    border-color: #4D5160;
+    width: 0%;
+    margin-left: 50%;
+    border: none;
+    border-top: 1px solid var(--border-color);
+    animation: expandHR 1s ease forwards;
 }
 
 .mb0 {
@@ -171,9 +185,94 @@ hr {
 
 .custom-a {
     text-decoration: none;
-    color: #8290c4;
+    color: var(--accent-color);
 }
 
 .text-medium {
     font-size: medium;
+}
+
+.responsive-image {
+    width: 90%;
+    height: auto;
+}
+
+.responsive-little-image {
+    width: 70%;
+    height: auto;
+
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    from {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes pulse {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes expandHR {
+    0% {
+        width: 0%;
+        margin-left: 50%;
+    }
+    100% {
+        width: 35%;
+        margin-left: 0%;
+    }
+}
+
+.animated-element {
+    opacity: 0;
+    animation-fill-mode: forwards;
+    animation: fadeIn 1s ease forwards;
+}
+
+.animated-header .animated-element {
+    animation: slideInFromLeft 1s ease forwards;
+}
+
+.animated-footer .animated-element {
+    animation: slideInFromBottom 1s ease forwards;
+}
+
+.icon-animated {
+    animation: pulse 1s infinite alternate;
+}
+
+.slide-in {
+    animation: slideInFromLeft 1s ease forwards;
 }
