--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 :root {
     --primary-bg-color: #0F111A;
     --secondary-bg-color: #181b29;
-    --primary-text-color: #4D5160;
+    --primary-text-color: #9DA1B0;
     --accent-color: #8290c4;
     --secondary-color: #60667a;
     --shadow-color: rgba(0, 0, 0, 0.1);
