--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@
     --accent-color: #8290c4;
     --secondary-color: #60667a;
     --shadow-color: rgba(0, 0, 0, 0.1);
-    --border-color: #4D5160;
+    --border-color: #9DA1B0;
 
     --custom-width: 100%;
     --custom-width-2: 100%;
