--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,6 +17,7 @@
 }
 
 body {
+    height: 100vh;
     background-color: var(--primary-bg-color);
     font-family: sans-serif;
     color: var(--primary-text-color);
